tools/gogs/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gogs
  labels:
    app: gogs
spec:
  selector:
    app: gogs
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
    - name: ssh
      port: 2222
      targetPort: 2222
      protocol: TCP
